--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,6 @@
 {
     "react-native": {
-        "crashlytics_debug_enabled": true,
-        "crashlytics_auto_collection_enabled": true,
-        "analytics_auto_collection_enabled": true
+        "crashlytics_auto_collection_enabled": false,
+        "analytics_auto_collection_enabled": false
     }
 }
