--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "18.3.1",
     "react-native": "^0.76.6",
     "react-native-date-picker": "^5.0.10",
+    "react-native-device-info": "^14.0.4",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "1.11.0",
