--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@likashefqet/react-native-image-zoom": "^4.3.0",
     "@mgcrea/react-native-dnd": "^2.5.3",
     "@react-native-community/slider": "4.5.2",
-    "@react-native-firebase/app": "21.0.0",
+    "@react-native-firebase/analytics": "^21.7.2",
+    "@react-native-firebase/app": "^21.7.2",
+    "@react-native-firebase/auth": "^21.7.2",
+    "@react-native-firebase/crashlytics": "^21.7.2",
     "@react-navigation/native": "^7.0.14",
     "@realm/react": "0.11.0",
     "date-fns": "4.1.0",
@@ -38,6 +41,7 @@
     "react-dom": "18.3.1",
     "react-native": "^0.76.6",
     "react-native-date-picker": "^5.0.10",
+    "react-native-device-info": "^14.0.4",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "1.11.0",
