--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "realm": "^20.1.0",
-    "expo-tracking-transparency": "~5.1.1"
+    "expo-tracking-transparency": "~5.1.1",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
