--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-splash-screen": "~0.29.19",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
+    "expo-tracking-transparency": "~5.1.1",
     "expo-video": "~2.0.4",
     "expo-video-thumbnails": "~9.0.2",
     "lodash": "4.17.21",
@@ -44,15 +45,14 @@
     "react-native-device-info": "^14.0.4",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-get-random-values": "1.11.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-google-mobile-ads": "^14.9.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "realm": "^20.1.0",
-    "expo-tracking-transparency": "~5.1.1",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "realm": "^20.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
