--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@expo/vector-icons": "14.0.2",
     "@fowusu/calendar-kit": "^1.1.0",
+    "@futurejj/react-native-visibility-sensor": "^1.3.11",
     "@likashefqet/react-native-image-zoom": "^4.3.0",
     "@mgcrea/react-native-dnd": "^2.5.3",
     "@react-native-community/slider": "4.5.2",
