--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
     "expo-tracking-transparency": "~5.1.1",
+    "expo-updates": "~0.26.18",
     "expo-video": "~2.0.4",
     "expo-video-thumbnails": "~9.0.2",
     "lodash": "4.17.21",
@@ -43,7 +44,6 @@
     "react-dom": "18.3.1",
     "react-native": "^0.76.6",
     "react-native-date-picker": "^5.0.10",
-    "react-native-device-info": "^14.0.4",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.8.0",
@@ -53,8 +53,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-webview": "13.12.5",
-    "realm": "^20.1.0",
-    "expo-updates": "~0.26.18"
+    "realm": "^20.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
@@ -80,6 +79,7 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-testing-library": "6.3.0",
+    "expo-atlas": "^0.4.0",
     "husky": "9.1.6",
     "jest": "~29.7.0",
     "jest-expo": "~52.0.2",
