--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/lodash": "4.17.13",
     "@types/react": "~18.3.12",
     "babel-loader": "8.4.1",
+    "dotenv": "^16.4.7",
     "eslint": "8.57.0",
     "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "9.1.0",
