--- a/package.json
+++ b/package.json
@@ -16,37 +16,37 @@
     "@react-navigation/native": "^7.0.14",
     "@realm/react": "0.11.0",
     "date-fns": "4.1.0",
-    "expo": "~52.0.24",
-    "expo-av": "~15.0.1",
-    "expo-build-properties": "~0.13.1",
-    "expo-camera": "~16.0.14",
+    "expo": "~52.0.46",
+    "expo-av": "~15.0.2",
+    "expo-build-properties": "~0.13.2",
+    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.2",
-    "expo-dev-client": "~5.0.8",
+    "expo-dev-client": "~5.0.20",
     "expo-file-system": "~18.0.6",
     "expo-font": "~13.0.2",
-    "expo-image": "~2.0.3",
-    "expo-image-picker": "~16.0.3",
-    "expo-linking": "~7.0.3",
+    "expo-image": "~2.0.7",
+    "expo-image-picker": "~16.0.6",
+    "expo-linking": "~7.0.5",
     "expo-local-authentication": "~15.0.2",
-    "expo-notifications": "~0.29.13",
-    "expo-router": "~4.0.16",
+    "expo-notifications": "~0.29.14",
+    "expo-router": "~4.0.20",
     "expo-screen-orientation": "~8.0.4",
-    "expo-splash-screen": "~0.29.19",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.9",
     "expo-tracking-transparency": "~5.1.1",
-    "expo-updates": "~0.26.18",
-    "expo-video": "~2.0.4",
-    "expo-video-thumbnails": "~9.0.2",
+    "expo-updates": "~0.27.4",
+    "expo-video": "~2.0.6",
+    "expo-video-thumbnails": "~9.0.3",
     "lodash": "4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "^0.76.6",
+    "react-native": "0.76.9",
     "react-native-date-picker": "^5.0.10",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-get-random-values": "^1.8.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-google-mobile-ads": "^14.9.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
@@ -58,12 +58,12 @@
   "devDependencies": {
     "@babel/core": "7.26.0",
     "@gorhom/bottom-sheet": "5.0.5",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/cli": "^15.1.3",
-    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/slider": "4.5.5",
     "@realm/babel-plugin": "0.2.0",
-    "@shopify/flash-list": "^1.7.1",
+    "@shopify/flash-list": "1.7.3",
     "@storybook/addon-ondevice-actions": "8.3.8",
     "@storybook/addon-ondevice-controls": "8.3.8",
     "@storybook/preview-api": "8.3.6",
@@ -83,7 +83,7 @@
     "expo-atlas": "^0.4.0",
     "husky": "9.1.6",
     "jest": "~29.7.0",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.6",
     "prettier": "3.3.3",
     "react-native-svg": "15.8.0",
     "react-test-renderer": "18.2.0",
