--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@expo/vector-icons": "14.0.2",
     "@fowusu/calendar-kit": "^1.1.0",
     "@futurejj/react-native-visibility-sensor": "^1.3.11",
+    "@gorhom/bottom-sheet": "^5.1.2",
     "@likashefqet/react-native-image-zoom": "^4.3.0",
     "@mgcrea/react-native-dnd": "^2.5.3",
     "@react-native-community/slider": "4.5.2",
@@ -29,6 +30,7 @@
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-local-authentication": "~15.0.2",
+    "expo-media-library": "~17.0.6",
     "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.20",
     "expo-screen-orientation": "~8.0.4",
@@ -48,16 +50,16 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
     "react-native-google-mobile-ads": "^14.9.0",
-    "react-native-paper": "^5.13.1",
+    "react-native-paper": "^5.13.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-webview": "13.12.5",
-    "realm": "^20.1.0"
+    "realm": "^20.1.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
-    "@gorhom/bottom-sheet": "5.0.5",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/cli": "^15.1.3",
     "@react-native-community/datetimepicker": "8.2.0",
