--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@gorhom/bottom-sheet": "^5.1.2",
     "@likashefqet/react-native-image-zoom": "^4.3.0",
     "@mgcrea/react-native-dnd": "^2.5.3",
-    "@react-native-community/slider": "4.5.2",
     "@react-native-firebase/analytics": "^21.7.2",
     "@react-native-firebase/app": "^21.7.2",
     "@react-native-firebase/auth": "^21.7.2",
@@ -28,6 +27,7 @@
     "expo-font": "~13.0.2",
     "expo-image": "~2.0.7",
     "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-local-authentication": "~15.0.2",
     "expo-media-library": "~17.0.6",
@@ -63,7 +63,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/cli": "^15.1.3",
     "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-community/slider": "4.5.5",
+    "@react-native-community/slider": "^4.5.6",
     "@realm/babel-plugin": "0.2.0",
     "@shopify/flash-list": "1.7.3",
     "@storybook/addon-ondevice-actions": "8.3.8",
