--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-webview": "13.12.5",
-    "realm": "^20.1.0"
+    "realm": "^20.1.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
@@ -63,7 +64,6 @@
     "@types/jest": "29.5.12",
     "@types/lodash": "4.17.13",
     "@types/react": "~18.3.12",
-    "dotenv": "^16.4.7",
     "eslint": "8.57.0",
     "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "9.1.0",
