--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@likashefqet/react-native-image-zoom": "^4.3.0",
     "@mgcrea/react-native-dnd": "^2.5.3",
     "@nozbe/watermelondb": "^0.28.0",
-    "@react-native-community/slider": "^4.5.6",
+    "@react-native-community/slider": "4.5.5",
     "@react-native-firebase/analytics": "^21.7.2",
     "@react-native-firebase/app": "^21.7.2",
     "@react-native-firebase/auth": "^21.7.2",
