--- a/package.json
+++ b/package.json
@@ -9,12 +9,7 @@
     "@mgcrea/react-native-dnd": "^2.5.3",
     "@nozbe/watermelondb": "^0.28.0",
     "@react-native-community/slider": "4.5.5",
-    "@react-native-firebase/analytics": "^21.7.2",
-    "@react-native-firebase/app": "^21.7.2",
-    "@react-native-firebase/auth": "^21.7.2",
-    "@react-native-firebase/crashlytics": "^21.7.2",
     "@react-navigation/native": "^7.0.14",
-    "@supabase/supabase-js": "^2.49.4",
     "date-fns": "4.1.0",
     "expo": "~52.0.46",
     "expo-av": "~15.0.2",
@@ -47,7 +42,9 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
     "react-native-google-mobile-ads": "^14.9.0",
+    "react-native-pager-view": "^6.7.1",
     "react-native-paper": "^5.13.2",
+    "react-native-paper-tabs": "^0.11.4",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
